# python-tmx

./: .gitignore  LICENSE  README.MD  README.md  a.tmx  example.tmx  main.py  pyproject.toml  sample.tmx  setup.py  test.py
PythonTmx/: __init__.py  _base.py  base.py  base_class.py  classes.py  core.py  errors.py  helpers.py  inline.py  main.py  protocols.py  structural.py  validate.py
PythonTmx/core/: __init__.py  base.py  inline.py  structural.py
docs/source/: PythonTMX.rst  conf.py  index.rst  modules.rst
python_tmx/: __init__.py  classes.py  errors.py  main.py  parser.py  segment.py
shared/: classes.py  enums.py
src/: errors.py  header.py  inline.py  main.py  note.py  prop.py  run.py  segment.py  structural.py  tmx.py  tu.py  tuv.py
src/PythonTmx/: __init__.py  base.py  classes.py  inline.py  main.py  structural.py
src/shared/: base.py
src/tmx/: a.tmx  inline.py  main.py  objects.py  structural.py
src/tmx/classes/: header.py  note.py  tu.py
src/tmx/structural/: header.py  tu.py
tmx/: __init__.py  structural.py
