[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "PythonTmx"
version = "0.2"
authors = [{ name = "Enzo Agosta", email = "agosta.enzowork@gmail.com" }]
description = "Python library for manipulating, creating and editing tmx files"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT" }
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = ["lxml"]
[project.optional-dependencies]
dev = ["mypy"]

[tool.setuptools.packages.find]
where = ["PythonTmx"]

[project.urls]
Homepage = "https://github.com/ChonkyYoshi/python-tmx"
Issues = "https://github.com/ChonkyYoshi/python-tmx/issues"
